# RM_OPENCV

./: CMakeLists.txt  WatchDog.sh  debuger.cpp  infantry.cpp
Detector/include/: classifier.h  detector.h  pnp.h
Detector/src/: classifier.cpp  detector.cpp  pnp.cpp
hik_camera/: HikCam.cpp  HikCam.hpp  README.md
